getViews makes a copy for better thread synchronization; changed some other parts of the code for optimization.